<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/label_menu_source">
        <menu>
            <item
                android:id="@+id/menu_github"
                android:checkable="true"
                android:icon="@drawable/ic_logo_github"
                android:title="@string/title_github"
                android:tooltipText="@string/summary_github" />

            <item
                android:id="@+id/menu_source"
                android:checkable="true"
                android:icon="@drawable/ic_android_cs"
                android:title="@string/title_source"
                android:tooltipText="@string/summary_source" />
        </menu>
    </item>

    <item android:title="@string/header_about">
        <menu>
            <item
                android:id="@+id/menu_privacy_agreement"
                android:checkable="true"
                android:icon="@drawable/ic_baseline_privacy_tip"
                android:title="@string/title_privacy_agreement" />

            <item
                android:id="@+id/menu_beta"
                android:checkable="true"
                android:icon="@drawable/ic_logo_android"
                android:title="@string/title_beta" />
        </menu>
    </item>
</menu>